# facade

./: README.md  __init__.py  app.py  pyproject.toml
core/: __init__.py  analytics.py
data/: system_dataset.json
facade_streamlit.egg-info/: PKG-INFO  SOURCES.txt
scripts/: generate_initial_data.py
